<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application -->
    <string name="app_name">MEMO</string>

    <!-- application consists of five pager sections -->
    <string name="title_section_timing">Timing</string>
    <string name="title_section_group">Group</string>
    <string name="title_section_quorum">Quorum</string>
    <string name="title_section_memo">Memo</string>
    <string name="title_section_benchmark">Benchmark</string>

    <string name="action_settings">Settings</string>
    <string name="title_reminder_list">Reminders</string>
    <string name="title_reminder_detail">Reminder Detail</string>

    <!-- login manager -->
    <string name="login_info_relogin">ReLogin</string>

    <!-- for the MemoFragment -->
    <string name="put_kv">Add</string>
    <string name="get_kv">Search</string>
    <string name="remove_kv">Delete</string>

    <string name="txt_memo_operations">Operations:</string>
    <string name="img_btn_add">Add</string>
    <string name="img_btn_search">Search</string>
    <string name="img_btn_delete">Delete</string>
    <string name="txt_kv_representation">Key ; Value ; Version</string>

    <!-- begin: put/get/remove kv-pairs dialogs -->

    <!-- title of dialogs -->
    <string name="kv_put_dialog_title">Put Key-value Dialog</string>
    <string name="kv_get_dialog_title">Get Key-value Dialog</string>
    <string name="kv_remove_dialog_title">Remove Key-value Dialog</string>

    <!-- input boxes in dialogs -->
    <string name="txt_kv_key">Key:</string>
    <string name="txt_kv_value">Value:</string>

    <!-- tag names of dialogs; used when the dialog is shown -->
    <string name="tag_put_dialog">tag_put_dialog</string>
    <string name="tag_get_dialog">tag_get_dialog</string>
    <string name="tag_remove_dialog">tag_remove_dialog</string>

    <!-- end: put/get/remove kv-pairs dialogs -->

    <!-- begin: for the group fragment -->
    <string name="txt_replica_representation">IP ; Name</string>

    <!-- begin: dialog for adding new server replica -->
    <string name="tag_join_group_dialog">tag_join_group_dialog</string>
    <string name="join_group_dialog_title">Add new server replica</string>
    <string name="txt_replica_ip">IP:</string>
    <string name="txt_replica_name">Name:</string>
    <string name="prompt_replica_ip">ip address</string>
    <!-- end: dialog for adding new server replica -->

    <!-- begin: dialog for scanning server replicas -->

    <!-- end: dialog for scanning server replicas -->
    <!-- end: for the group fragment -->

    <!-- begin: for the benchmark fragment -->
    <string name="radio_reader">Reader</string>
    <string name="radio_writer">Writer</string>
    <string name="prompt_request_number">number of requests</string>
    <string name="prompt_rate">number per second</string>
    <string name="prompt_key_range">key range: [0, INPUT)</string>
    <string name="prompt_value_range">value range: [0, INPUT)</string>
    <string name="run">Run Benchmark</string>

    <string name="txt_exec_not_ready">No execution ready.</string>
    <string name="txt_exec_ready">Execution has been stored in the file: /sdcard/execution.txt</string>
    <string name="btn_exec_sync">Sync Time</string>
    <!-- end: for the benchmark fragment -->

    <!-- Timing Service -->
    <string name="hello_world">Hello world!</string>
    <string name="btn_time_polling">Polling Time</string>
    <string name="btn_start_polling">Start Polling</string>
    <string name="txt_timing_log">Timing Service Log To Show.</string>
    <string name="txt_timing_log_start">Connection to PC has been established. Wait for authorization.</string>
    <string name="txt_timing_log_polling">Permission granted. Now you can poll time from PC.</string>
    <!-- End: Timing Service -->

    <!-- Quorum -->
    <string name="txt_quorum">Setting read/write quorum size.</string>
    <string name="txt_read_quorum">Read quorum:</string>
    <string name="txt_write_quorum">Write quorum:</string>
    <string name="btn_quorum_done">Done</string>
    <string name="btn_quorum_default">Use Default</string>
    <string name="txt_quorum_info">Quorum System:</string>
    <!-- End: Quorum -->
</resources>
