<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Choose the role of the client: reader or writer -->
    <RadioGroup
        android:id="@+id/radio_grp_rw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_writer" />

        <RadioButton
            android:id="@+id/radio_reader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_reader" />
    </RadioGroup>

    <!-- configuration of this benchmark workload -->
    
    <!-- total number of requests -->
    <EditText
        android:id="@+id/etxt_request_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radio_grp_rw"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/prompt_request_number"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <!-- number of requrests issued per seconds -->
    <EditText
        android:id="@+id/etxt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etxt_request_number"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/prompt_rate"
        android:inputType="number" />

    <!-- range of keys -->
    <EditText
        android:id="@+id/etxt_key_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etxt_rate"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/prompt_key_range"
        android:inputType="number" />

    <!-- range of values -->
    <EditText
        android:id="@+id/etxt_value_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etxt_key_range"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/prompt_value_range"
        android:inputType="number" />

    <!-- click this button to run this benchmark -->
    <Button
        android:id="@+id/btn_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/run" />

    <!-- separation line between the above workload configuration UI and the following execution processing UI -->
    <View
        android:id="@+id/sep_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/etxt_value_range"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <!-- text to notify whether the benchmark has been finished and the exeuction has been stored -->
    <TextView
        android:id="@+id/txt_exec_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sep_line"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_exec_not_ready" />

    <!-- sync. times of the execution -->
    <!-- the sync. pre-processing step has been moved to the side of computer
    <Button
        android:id="@+id/btn_exec_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txt_exec_ready"
        android:layout_marginRight="0dp"
        android:text="@string/btn_exec_sync" />
 	-->
</RelativeLayout>