<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<!-- Operations -->

    <ImageButton
        android:id="@+id/imgbtn_add_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/img_btn_add"
        android:src="@drawable/add" />
    <!--android:maxHeight="@dimen/abc_action_bar_default_height"-->

    <ImageButton
        android:id="@+id/imgbtn_delete_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imgbtn_add_group"
        android:contentDescription="@string/img_btn_delete"
        android:src="@drawable/delete" />
    <!--android:maxHeight="@dimen/abc_action_bar_default_height"-->

<!-- list of key-value pairs -->        
    <!-- key-value pairs representation -->

    <TextView
        android:id="@+id/replica_representation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgbtn_delete_group"
        android:text="@string/txt_replica_representation" />

    <!-- list of server replicas -->
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/replica_representation" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center" />

</RelativeLayout>
